# home_work_class

./: hello.txt  main.py  new.py  new_15_1.py  new_15_2.py  new_16_1.py  new_2.py  new_3.py  pyproject.toml
