[tool.poetry]
name = "home-work-class"
version = "0.1.0"
description = ""
authors = ["vertiporogov <133884681+vertiporogov@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "home_work_class"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

